Commiting passbook APIs

--- a/course-mw/sunbird-util/sunbird-platform-core/common-util/src/main/resources/externalresource.properties
+++ b/course-mw/sunbird-util/sunbird-platform-core/common-util/src/main/resources/externalresource.properties
@@ -125,3 +125,7 @@ es_course_batch_index=course-batch
 es_user_index=user
 es_organisation_index=org
 es_user_courses_index=user-courses
+
+#Passbook
+passbook_types=competency
+user.passbook.supported.typename=competency
